--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-    "name": "cheesefinder",
-    "version": "1.0.0",
-    "description": "A cheese finding game",
-    "main": "server.mjs",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.mjs"
-    },
-    "engines": {
-      "node": ">=7.6.0",
-      "npm": ">=4.1.2"
-    },
-    "author": "RobMiles",
-    "license": "ISC",
-    "dependencies": {
-    },
-    "devDependencies": {},
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/Building-Apps-and-Games-in-the-Cloud/Building-Apps-and-Games-in-the-Cloud.github.io" 
-    },
-    "homepage": "https://begintocodecloud.com/"
+  "name": "azure-app.csc",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "engines": { "node": "20.x" },
+  "scripts": {
+    "start": "node server.mjs"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
+}
